--- a/blog/Dockerfile
+++ b/blog/Dockerfile
@@ -1,18 +1,33 @@
-FROM node:lts-buster-slim AS development
+# syntax=docker/dockerfile:1.4
 
-RUN mkdir /blog
-WORKDIR /blog
+FROM --platform=$BUILDPLATFORM node:18.14-bullseye-slim as builder
 
-COPY package.json package.json
-COPY package-lock.json package-lock.json
-
-RUN npm ci
-
-WORKDIR /blog
-COPY . .
+RUN mkdir /project
+WORKDIR /project
 
 RUN npm install -g @angular/cli
 
-EXPOSE 4200
+COPY package.json package-lock.json ./
+RUN npm ci
 
-CMD ["ng","serve"]
+COPY . .
+CMD ["ng", "serve", "--host", "0.0.0.0"]
+
+FROM builder as dev-envs
+
+RUN <<EOF
+
+FROM ubuntu:latest
+RUN apt-get -y update
+RUN apt-get -y install -y --no-install-recommends git
+EOF
+
+RUN <<EOF
+useradd -s /bin/bash -m vscode
+groupadd docker
+usermod -aG docker vscode
+EOF
+# install Docker tools (cli, buildx, compose)
+COPY --from=gloursdocker/docker / /
+
+CMD ["ng", "serve", "--host", "0.0.0.0"]
