--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -1,10 +1,10 @@
 services:
   web:
     build:
-      context: app
+      context: blog
       target: builder
     ports:
       - 4200:4200
     volumes:
-      - ./app:/project
+      - ./blog:/project
       - /project/node_modules
